--- a/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
+++ b/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
@@ -26,29 +26,44 @@
             </ngx-datatable-column>
 
             <ngx-datatable-column name="Jumlah Consumer" prop="audience_customer_count">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.audience_customer_count | rupiahFormaterWithoutRp }}
+              </ng-template>
             </ngx-datatable-column>
 
             <ngx-datatable-column name="Jumlah Retailer" prop="audience_retailer_count">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.audience_retailer_count | rupiahFormaterWithoutRp }}
+              </ng-template>
             </ngx-datatable-column>
 
             <ngx-datatable-column name="Jumlah Voucher Dikirim" prop="qty_voucher_sent">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.qty_voucher_sent | rupiahFormaterWithoutRp }}
+              </ng-template>
             </ngx-datatable-column>
 
             <ngx-datatable-column name="Consumer Tukar Voucher" prop="customer_redeem_count">
-            </ngx-datatable-column>s
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.customer_redeem_count | rupiahFormaterWithoutRp }}
+              </ng-template>
+            </ngx-datatable-column>
 
             <ngx-datatable-column name="Toko Terima Voucher" prop="retailer_receive_voucher_count">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.retailer_receive_voucher_count | rupiahFormaterWithoutRp }}
+              </ng-template>
             </ngx-datatable-column>
 
-            <ngx-datatable-column name="Jumlah Voucher Ditukar" prop="end_date">
+            <ngx-datatable-column name="Jumlah Voucher Ditukar" prop="voucher_redeem_count">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.voucher_redeem_count | rupiahFormaterWithoutRp }}
+              </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column name="Tanggal Awal Program" prop="end_date">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.end_date | date: 'dd/MM/yyyy
                 HH:mm:ss'}}</ng-template>
-            </ngx-datatable-column>
-
-            <ngx-datatable-column name="Tanggal Awal Program" prop="nominal">
-              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                {{row.nominal | rupiahFormater }}
-              </ng-template>
             </ngx-datatable-column>
 
             <ngx-datatable-column name="Tanggal Akhir Program" prop="expired_at">
