--- a/src/app/pages/b2c-voucher/edit/tab/list-detail-voucher/list-detail-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/list-detail-voucher/list-detail-voucher.component.html
@@ -149,9 +149,10 @@
         </ngx-datatable-column>
         <ngx-datatable-column
           name="Total Transaksi"
-          prop="total_transaction"
+          prop="total_transaction_rupiah"
           [sortable]="false"
-        ></ngx-datatable-column>
+        >
+        </ngx-datatable-column>
         <ngx-datatable-column
           name="Detail Transaksi"
           [sortable]="false"
