--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -1,4 +1,4 @@
-<div class="ayo-middle p-24" fxLayout="column">
+<div class="ayo-middle p-24" #containerScroll fxLayout="column">
   <div>
     <div fxLayout="row" class="pb-24 px-12">
       <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isChangeVoucherAutomation($event)"
@@ -15,6 +15,9 @@
           <mat-form-field fxFlex="50" class="is-light" *ngIf="isVoucherAutomation.value === true">
             <input matInput type="number" placeholder="Jumlah Total Alokasi Voucher" formControlName="allocationVoucher">
             <mat-error *ngIf="formConsumerGroup.controls['allocationVoucher'].hasError('required') && formConsumerGroup.controls['allocationVoucher'].touched ">
+              Jumlah Total Alokasi Voucher harus diisi.
+            </mat-error>
+            <mat-error *ngIf="formConsumerGroup.controls['allocationVoucher'].hasError('min') && formConsumerGroup.controls['allocationVoucher'].touched ">
               Jumlah Total Alokasi Voucher harus diisi.
             </mat-error>
           </mat-form-field>
@@ -79,6 +82,9 @@
               </mat-radio-button>
             </mat-radio-group>
           </div>
+          <mat-error *ngIf="formConsumerGroup.controls['va'].hasError('required') && formConsumerGroup.controls['va'].touched">
+            Opsi Automation harus dipilih
+          </mat-error>
 
         </div>
 
