--- a/src/app/pages/b2c-voucher/edit/tab/penukaran-voucher/penukaran-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/penukaran-voucher/penukaran-voucher.component.html
@@ -1,5 +1,5 @@
 
-<div class="ayo-middle p-24" fxLayout="column">
+<div class="ayo-middle p-24" #containerScroll fxLayout="column">
   <div>
     <div fxLayout="row" class="pb-24 px-12">
       <mat-checkbox class="mt-4 ml-4 mb-8"
