feat: CDE 2564 B2C EVoucher Phase 1 #5

--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <form autocomplete="off" [formGroup]="formConsumerGroup">
-      <div fxLayout="row">
+      <div fxLayout="row" *ngIf="!formConsumerGroup.get('isTargetAudience').value">
 
         <div fxFlex="45">
 
