--- a/src/app/pages/user-management/wholesaler/import-list-wholesaler/import-list-wholesaler.component.html
+++ b/src/app/pages/user-management/wholesaler/import-list-wholesaler/import-list-wholesaler.component.html
@@ -88,7 +88,7 @@
               {{ item.cashier }}
             </td>
             <td nowrap>
-              {{item.gsw == '1' ? 'ON' : 'OFF'}}
+              {{item.gsw}}
             </td>
             <td nowrap>
               {{ item.districtcode }}
